# Abschlussarbeit

Thesis Tests/Graph Plotter/CLINE/Claude Sonnet 4.5/5/: CMakeLists.txt
Thesis Tests/Graph Plotter/CLINE/Claude Sonnet 4.5/5/public/: styles.css
Thesis Tests/Graph Plotter/CLINE/Claude Sonnet 4.5/5/src/: PlotRenderer.cpp  Utils.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/1/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/1/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/1/src/: HttpServer.cpp  HttpServer.h  Image.cpp  Image.h  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/10/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/10/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/10/src/: HttpServer.cpp  HttpServer.h  Image.cpp  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/2/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/2/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/2/src/: HttpServer.cpp  HttpServer.h  Image.cpp  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/4/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/4/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/4/src/: HttpServer.cpp  HttpServer.h  Image.cpp  Image.h  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/5/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/5/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/5/src/: HttpServer.cpp  HttpServer.h  Image.cpp  Image.h  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/6/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/6/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/6/src/: HttpServer.cpp  HttpServer.h  Image.cpp  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/8/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/8/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/8/src/: HttpServer.cpp  HttpServer.h  Image.cpp  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/9/: CMakeLists.txt
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/9/public/: index.html  styles.css
Thesis Tests/Graph Plotter/Codex/gpt-5-codex medium/9/src/: HttpServer.cpp  HttpServer.h  Image.cpp  Image.h  PlotRenderer.cpp  PlotRenderer.h  Utils.cpp  Utils.h  main.cpp
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/10/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/10/public/: index.html  scripts.js
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/10/src/: HttpResponse.cpp  HttpResponse.h  Server.cpp  Server.h  UploadHandler.cpp  main.cpp
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/2/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/2/public/: index.html
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/2/src/: FileHandler.cpp  HttpRequest.h  Server.cpp  Server.h  UploadHandler.cpp  main.cpp
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/9/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/9/public/: index.html
Thesis Tests/Image Upload Server/CLINE/Claude sonnet 4.5/9/src/: FileHandler.cpp  FileHandler.h  HttpRequest.h  UploadHandler.cpp  UploadHandler.h  main.cpp
Thesis Tests/Image Upload Server/CLINE/Mistral medium/4/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Mistral medium/4/public/: index.html  scripts.js  styles.css
Thesis Tests/Image Upload Server/CLINE/Mistral medium/4/src/: FileHandler.cpp  FileHandler.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Server.cpp  Server.h  UploadHandler.cpp  UploadHandler.h
Thesis Tests/Image Upload Server/CLINE/Mistral medium/5/: CMakeLists.txt  test_server.sh
Thesis Tests/Image Upload Server/CLINE/Mistral medium/6/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Mistral medium/7/: CMakeLists.txt
Thesis Tests/Image Upload Server/CLINE/Mistral medium/8/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/1/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/10/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/2/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/3/: CMakeLists.txt  README.md  hello  hello.cpp
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/4/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/5/: CMakeLists.txt  shell.nix
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/6/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/7/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/8/: CMakeLists.txt
Thesis Tests/Image Upload Server/Codex/gpt-5-codex medium/9/: CMakeLists.txt  README.md  request_test  request_test.cpp  upload_test  upload_test.cpp
Thesis Tests/Image Upload Server/Copilot/Claude sonnet 4.5/1/: CMakeLists.txt
Thesis Tests/WAV Streaming Server/Codex/10/: CMakeLists.txt
Thesis Tests/WAV Streaming Server/Codex/10/public/: app.js  index.html  styles.css
Thesis Tests/WAV Streaming Server/Codex/10/src/: Server.cpp  Server.h  main.cpp
Thesis Tests/WAV Streaming Server/Codex/4/: CMakeLists.txt  shell.nix
Thesis Tests/WAV Streaming Server/Codex/4/public/: app.js  index.html  styles.css
Thesis Tests/WAV Streaming Server/Codex/4/src/: Server.cpp
(+1094 files in other folders)
